# ai-for-software-engineers

./: .gitignore  README.md  agents.md  pyproject.toml  requirements-module-02.txt  requirements-module-03.txt  requirements-module-04.txt  requirements-module-05.txt  requirements.txt  setup.sh
datasets/: README.md  sample-corpus.json
docs/: 01-local-setup.md  02-vscode-setup.md  03-claude-code-setup.md  04-codex-setup.md  05-openrouter-setup.md  06-ollama-setup.md  07-mcp-setup.md  08-running-projects.md  09-testing-projects.md  10-deployment-guide.md  agent-frameworks.md  architecture.md  curriculum_v1.md  ide-setup.md  module-structure.md  run-test-deploy.md  vscode-codex-setup.md
project-completed/: README.md
project-completed/datasets/: lesson-04-output.json  lesson-05-output.json  lesson-06-output.json
project-completed/module-02-ai-fundamentals/: README.md  lesson-02-tokens-context-completion.py  lesson-04-prompting-retrieval-finetuning.py  lesson-05-embeddings-semantic-search.py  lesson-06-mini-search-demo.py
project-completed/module-03-ai-developer-toolkit/: README.md  lesson-01-calling-llm-apis.py  lesson-02-calling-llm-apis.py  lesson-03-rapid-prototyping.py  lesson-04-building-chat-interface.py  lesson-05-devops-for-ai-apps.py  lesson-06-ai-operations-assistant.py  lesson-06-ai-summarizer-service.py
project-completed/module-04-practical-rag-context-engineering/: README.md  lesson-01-rag-blueprint.py  (+5 more)
project-todo/: README.md
scripts/: run_cli_agent.sh  run_streamlit.sh
shared/: __init__.py
src/: __init__.py  app.py  cli_agent.py
(+82 files in other folders)
